# claude-code-handbook

./: CLAUDE.md  README.md  SUMMARY.md
.claude/: ARCHITECTURE.md  SPEC.md
DEMO/production-ai-app/: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
DEMO/production-ai-app/.claude/rules/: code-style.md  testing.md
DEMO/production-ai-app/agents/: __init__.py  adaptive_router.py  document_grader.py  query_decomposer.py
DEMO/production-ai-app/agents/tools/: __init__.py  code_search.py  vector_search.py  web_search.py
DEMO/production-ai-app/app/: Dockerfile  __init__.py  config.py  main.py  models.py
DEMO/production-ai-app/app/components/: hybrid_retriever.py  reranker.py
DEMO/production-ai-app/app/services/: __init__.py  conversation.py  query_rewriter.py  query_router.py  rag_pipeline.py  semantic_cache.py
DEMO/production-ai-app/data/index_config/: README.md  default.json
DEMO/production-ai-app/docs/: api-reference.md  architecture.md  deployment.md  request-flow.md
DEMO/production-ai-app/evaluation/: golden_dataset.json  offline_eval.py  online_monitor.py
DEMO/production-ai-app/frontend/: Dockerfile  app.py
DEMO/production-ai-app/observability/: __init__.py  cost_tracker.py  feedback.py  tracer.py
DEMO/production-ai-app/prompts/: __init__.py  registry.py  templates.py
DEMO/production-ai-app/scripts/: healthcheck.py  migrate.py  seed.py
DEMO/production-ai-app/security/: __init__.py  content_filter.py  input_guard.py  output_filter.py
DEMO/production-ai-app/tests/: test_cache.py  test_retrieval.py  test_routing.py
(+98 files in other folders)
